custom form complete

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -109,7 +109,6 @@
     "sold_out_badge_color_scheme": "scheme-1",
     "brand_headline": "Bike Shack",
     "brand_description": "<p>Share contact information, store details, and brand content with your customers.</p>",
-    "brand_image": "shopify://shop_images/logo.png",
     "brand_image_width": 100,
     "social_facebook_link": "https://www.facebook.com/shopify",
     "social_instagram_link": "https://instagram.com/shopify",
@@ -123,7 +122,7 @@
     "predictive_search_enabled": true,
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": false,
-    "currency_code_enabled": false,
+    "currency_code_enabled": true,
     "cart_type": "drawer",
     "show_vendor": false,
     "show_cart_note": false,
